deployment/current-deployment/new_self/cilium_test_network_issues.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-wireguard-pod
spec:
  podSelector:
    matchLabels:
      name: wireguard
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
